--- a/angular-app/src/app/components/login/login.component.html
+++ b/angular-app/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal"  (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+<form [ngBusy]="busy" class="form-horizontal"  (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
   <div  class="row">
      <div class="col-md-3"></div>
      <div class="col-md-6">
