--- a/angular-app/src/app/components/update-post/update-post.component.html
+++ b/angular-app/src/app/components/update-post/update-post.component.html
@@ -1,4 +1,4 @@
-<h3> Update Car</h3>
+<h3> Update Post</h3>
 <form ng-if="complexForm != null" [formGroup]="complexForm" (ngSubmit)="updateCar(complexForm.value)">
   <div class="form-group">
     <label for="">
