--- a/angular-app/src/app/components/new-post/new-post.component.html
+++ b/angular-app/src/app/components/new-post/new-post.component.html
@@ -1,4 +1,4 @@
-<h3> New Car</h3>
+<h3> New Post</h3>
 <form [formGroup]="complexForm" (ngSubmit)="newCar(complexForm.value)">
   <div class="form-group">
     <label for="">
