--- a/angular-app/src/app/components/list/list.component.html
+++ b/angular-app/src/app/components/list/list.component.html
@@ -1,15 +1,15 @@
 <div class="row">
   <div class="col-lg-8">
     <p>
-      <b>Filter by post id :</b>
+      <b>Filter by post name :</b>
       <select [(ngModel)]="selectedItem" (ngModelChange)="searchPost()">
         <option [value]="-1" selected>choose option</option>
-        <option *ngFor="let item of listPosts" [value]="item.id">{{item.name}}</option>
+        <option *ngFor="let item of listPosts" [value]="item.id">{{item.title}}</option>
       </select>
     </p>
   </div>
   <div class="col-lg-4">
-    <a class="btn btn-primary btn-xs pull-right " routerLink="/newcar" preserveQueryParams preserveFragment>
+    <a class="btn btn-primary btn-xs pull-right " routerLink="/newpost" preserveQueryParams preserveFragment>
       <b>+</b> Add new post </a>
   </div>
 </div>
@@ -24,14 +24,14 @@
           <th>Name</th>
           <th>Thumbnail</th>
           <th>Content</th>
-          <th></th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let post of filtredPosts">
           <td>{{post.id}} </td>
-          <td>{{post.postCategoryName}}</td>
-          <td>{{post.name}}</td>
+          <td>{{post.postCategoryId}}</td>
+          <td>{{post.title}}</td>
           <td>{{post.image}}</td>
           <td>{{post.content}}</td>
           <td>
