--- a/angular-app/src/app/components/update-post/update-post.component.html
+++ b/angular-app/src/app/components/update-post/update-post.component.html
@@ -10,22 +10,22 @@
     <label for="">
       <b>Name</b>
     </label>
-    <input type="text" class="form-control" [formControl]="complexForm.controls['name']">
-    <div *ngIf="complexForm.controls['name'].hasError('required')" class="has-error">field required</div>
+    <input type="text" class="form-control" [formControl]="complexForm.controls['title']">
+    <div *ngIf="complexForm.controls['title'].hasError('required')" class="has-error">field required</div>
   </div>
   <div class="form-group">
     <label for="">
-      <b>Mark</b>
+      <b>Image</b>
     </label>
-    <input type="text" class="form-control" [formControl]="complexForm.controls['mark']">
-    <div *ngIf="complexForm.controls['mark'].hasError('required')" class="has-error">field required</div>
+    <input type="text" class="form-control" [formControl]="complexForm.controls['image']">
+    <div *ngIf="complexForm.controls['image'].hasError('required')" class="has-error">field required</div>
   </div>
   <div class="form-group">
     <label for="">
-      <b>Model</b>
+      <b>Content</b>
     </label>
-    <input type="text" class="form-control" [formControl]="complexForm.controls['model']">
-    <div *ngIf="complexForm.controls['model'].hasError('required')" class="has-error">field required</div>
+    <input type="text" class="form-control" [formControl]="complexForm.controls['content']">
+    <div *ngIf="complexForm.controls['content'].hasError('required')" class="has-error">field required</div>
   </div>
   <div class="form-group">
     <button type="submit" class="btn btn-primary" [disabled]="!complexForm.valid">Submit</button>
