--- a/angular-app/src/app/components/update-post/update-post.component.html
+++ b/angular-app/src/app/components/update-post/update-post.component.html
@@ -1,10 +1,21 @@
 <h3> Update Post</h3>
-<form ng-if="complexForm != null" [formGroup]="complexForm" (ngSubmit)="updateCar(complexForm.value)">
+<form ng-if="complexForm != null" [formGroup]="complexForm" (ngSubmit)="updatePost(complexForm.value)">
   <div class="form-group">
     <label for="">
       <b>Id</b>
     </label>
     <input type="text" class="form-control" [formControl]="complexForm.controls['id']" disabled>
+  </div>
+  <div class="form-group">
+    <label for="">
+      <b>Category</b>
+    </label>
+
+    <select class="form-control" id="postCategoryId" formControlName="postCategoryId">
+      <option value="null">Please select a category</option>
+      <option *ngFor="let c of listCategories" value="{{c.id}}">{{c.title}}</option>
+    </select>
+    <div *ngIf="complexForm.controls['postCategoryId'].hasError('required')" class="has-error">field required</div>
   </div>
   <div class="form-group">
     <label for="">
