--- a/angular-app/src/app/components/new-post/new-post.component.html
+++ b/angular-app/src/app/components/new-post/new-post.component.html
@@ -23,8 +23,9 @@
     <label for="">
       <b>Image</b>
     </label>
-    <input type="text" class="form-control" id="image" formControlName="image" />
-    <div *ngIf="complexForm.controls['image'].hasError('required')" class="has-error">field required</div>
+    <br />
+    <br />
+    <input type="file" name="file" [ngModelOptions]="{standalone: true}" ngModel (change)="getFiles($event)">
   </div>
   <div class="form-group">
     <label for="">
