--- a/angular-app/src/app/components/login/login.component.html
+++ b/angular-app/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-md-offset-4 text-center logo-margin ">
-      <img src="assets/img/logo.png" alt="" />
+        <span style="font-size: 30px; text-transform: uppercase;position: relative;color: white;">Simple Blog Engine</span>
     </div>
     <div class="col-md-4 col-md-offset-4">
       <div class="login-panel panel panel-default">
