--- a/angular-app/src/app/components/categories/categories.component.html
+++ b/angular-app/src/app/components/categories/categories.component.html
@@ -8,7 +8,7 @@
         <div class="col-lg-8">
           <p>
             <b>Filter by category name :</b>
-            <select [(ngModel)]="selectedItem" (ngModelChange)="searchCategories()">
+            <select style="width: 200px; display:inline-block;" class="form-control" [(ngModel)]="selectedItem" (ngModelChange)="searchCategories()">
               <option [value]="-1" selected>choose category</option>
               <option *ngFor="let item of listCategories" [value]="item.id">{{item.title}}</option>
             </select>
@@ -21,7 +21,7 @@
         <br />
         <br />
       </div>
-      <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered table-hover">
+      <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered table-hover" data-page-length="10">
         <thead>
           <tr>
             <th>ID</th>
