--- a/angular-app/src/app/components/posts/posts.component.html
+++ b/angular-app/src/app/components/posts/posts.component.html
@@ -8,7 +8,7 @@
         <div class="col-lg-8">
           <p>
             <b>Filter by post name :</b>
-            <select [(ngModel)]="selectedItem" (ngModelChange)="searchPost()">
+            <select style="width: 200px; display:inline-block;" class="form-control" [(ngModel)]="selectedItem" (ngModelChange)="searchPost()">
               <option [value]="-1" selected>choose post</option>
               <option *ngFor="let item of listPosts" [value]="item.id">{{item.title}}</option>
             </select>
@@ -21,7 +21,7 @@
         <br />
         <br />
       </div>
-      <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered table-hover">
+      <table id="myTable" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered table-hover" data-page-length="10">
         <thead>
           <tr>
             <th>ID</th>
@@ -35,10 +35,11 @@
         <tbody>
           <tr *ngFor="let post of filtredPosts">
             <td>{{post.id}} </td>
-            <td>{{post.postCategoryId}}</td>
+            <td>{{post.categoryName}}</td>
             <td>{{post.title}}</td>
             <td>
-              <img width="50" src="https://localhost:44374/Upload/Posts/{{post.image}}" />
+              <img width="50" *ngIf="post.image;else no_image" src="https://localhost:44374/Upload/Posts/{{post.image}}" />
+              <ng-template #no_image><img width="70" src="assets/img/no-image.png" /></ng-template>
             </td>
             <td>{{post.content}}</td>
             <td>
@@ -55,3 +56,9 @@
     </div>
   </div>
 </div>
+
+<script>
+  $('#myTable').DataTable( {
+    select: true
+} );
+</script>
