--- a/angular-app/src/assets/css/main-style.css
+++ b/angular-app/src/assets/css/main-style.css
@@ -129,7 +129,7 @@ border-color: #27A6BE;
     #page-wrapper {
         position: inherit;
         margin: 0 0 0 250px;
-        padding: 32px 30px;
+        padding: 27px 0;
         min-height: 1000px;
 
 
